# pistache_predictor

./: CMakeLists.txt  CMakeLists.txt_libtorch  Dockerfile  Dockerfile_libtorch  LICENSE  README.md  compare_predictions.py  docker-compose.yml
src/: demo_model.pt  server.cc  server.cc_libtorch  train_demo_model.py
training/: CHEMBL1829.csv  environment.yml  train_demo_model.py
